# llvm_mlir

./: DESIGN.docx  EVALUATION.docx  IMPLEMENTATION.docx  README.md  README.txt  scripts.docx  test.mdarray.mlir
clang/test/CodeGenHLSL/: all-resources-bound.hlsl  resources-declared-only-once.hlsl
clang/test/CodeGenHLSL/builtins/: WaveActiveAllEqual.hlsl  (+2 more)
clang/test/Driver/: dxc_spirv-val_missing.hlsl
clang/test/OpenMP/: strided_update_messages_from.c  strided_update_messages_to.c  strided_update_multiple_messages_from.c  strided_update_multiple_messages_to.c  strided_update_partial_messages_from.c  strided_update_ptr_multiple_messages_from.c  strided_update_ptr_multiple_messages_to.c  strided_update_ptr_partial_messages_from.c  strided_update_ptr_partial_messages_to.c  strided_update_struct_messages_from.c  strided_update_struct_messages_to.c  strided_update_struct_multiple_messages_from.c  strided_update_struct_multiple_messages_to.c  strided_update_struct_partial_messages_from.c  strided_update_struct_partial_messages_to.c
clang/test/Options/: all_resources_bound.hlsl
clang/test/Sema/: attr-ms-forceinline.c
clang/utils/ClangVisualizers/: clang.natvis
llvm/test/Other/: debugcounter-slsr.ll
llvm/unittests/HTTP/: CMakeLists.txt
llvm/utils/release/: build_llvm_release.bat
mlir/examples/: CMakeLists.txt
mlir/examples/MDArray/: CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  PRESENTATION.md  README.md  REPORT.md
mlir/examples/MDArray/mdarray-opt/: CMakeLists.txt  mdarray-opt.cpp
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
(+46 files in other folders)
